feature: add next and prev endpoints
